containerDeploy/gke/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: financeservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financeservice
  template:
    metadata:
      labels:
        app: financeservice
    spec:
      containers:
      - name: peer2peerworkcontractcluster
        # Replace [GCLOUD_PROJECT] with your project ID.
        image: gcr.io/peer2peerworkcontract/peer2peerworkcontractcluster-financeservice:v3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 300
          timeoutSeconds: 30
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        
        # The traderepository process listens on port 8080 for web traffic by default.
        ports:
        - name: financehttp
          containerPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peer2peerfrontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peer2peerfrontend
  template:
    metadata:
      labels:
        app: peer2peerfrontend
    spec:
      containers:
      - name: peer2peerworkcontractcluster
        # Replace [GCLOUD_PROJECT] with your project ID.
        image: gcr.io/peer2peerworkcontract/peer2peerworkcontractcluster-peer2peerfrontend:v3

        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        
        ports:
        - name: p2phttp
          containerPort: 8080
