containerDeploy/gke/Finance.LoadBalance.yaml
apiVersion: v1
kind: Service

metadata:
  name: financeservice-loadbalance
  labels:
    app: financeservice

spec:
  type: LoadBalancer
  ports:
  
  - port: 8888
    targetPort: financehttp
 
  selector:
    app: financeservice
