containerDeploy/gke/FinanceService.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financeservice-service
spec:
  type: NodePort
  ports:
  - port: 80
    #nodePort: 30390
    protocol: TCP
    targetPort: 8888
  selector:
    app: financeservice
