containerDeploy/gke/PeerToPeer.LoadBalance.yaml
apiVersion: v1
kind: Service

metadata:
  name: peer2peerfrontend-loadbalance
  labels:
    app: peer2peerfrontend

spec:
  type: LoadBalancer
  ports:
  
  - port: 8080
    targetPort: p2phttp
 
  selector:
    app: peer2peerfrontend
