containerDeploy/gke/PeerToPeer.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peer2peerfrontend-service
spec:
  type: NodePort
  ports:
  - port: 80
    #nodePort: 30390
    protocol: TCP
    targetPort: 8080
  selector:
    app: peer2peerfrontend
