containerDeploy/gke/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financeservice-service
spec:
  type: NodePort
  ports:
  - port: 8888
    #nodePort: 30390
    protocol: TCP
    targetPort: 8888
  selector:
    app: financeservice
---
apiVersion: v1
kind: Service
metadata:
  name: peer2peerfrontend-service
spec:
  type: NodePort
  ports:
  - port: 8080
    #nodePort: 30390
    protocol: TCP
    targetPort: 8080
  selector:
    app: peer2peerfrontend
