containerDeploy/gke/fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/ecashorder/*
        backend:
          serviceName: financeservice-service
          servicePort: 8888
      - path: /w/*
        backend:
          serviceName: web-service
          servicePort: 8887
      - path: /*
        backend:
          serviceName: peer2peerfrontend-service
          servicePort: 8080
