containerDeploy/gke/fanout-ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout2-ingress
spec:
  backend:
    serviceName: financeservice-service
    servicePort: 8888
