containerDeploy/gke/fanout.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"

spec:
  rules:
    - http:
        paths:
          - path: /api/ecashorder/*
            backend:
              serviceName: financeservice-service
              servicePort: 8888
          - path: /api/customer/*
            backend:
              serviceName: customerservice-service
              servicePort: 9000
          - path: /*
            backend:
              serviceName: peer2peerfrontend-service
              servicePort: 8080
